cabal-version:       3.0
name:                hih
version:             0.1.0.0
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Lexer.Lexer
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010
  hs-source-dirs:      lib

executable hih
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base ^>=4.14.1.0, hih
  default-language:    Haskell2010
