cabal-version:       3.0
name:                rutwe
version:             0.1.0.0
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Lexer.Lexer
  other-modules:       Lexer.Internal.Error
                     , Lexer.Internal.Lexer                       
                     , Lexer.Internal.Token
                     , Lexer.Internal.Position
                     , Lexer.Internal.Layout
  build-depends:       base ^>=4.14.1.0
                     , pretty-simple
                     , relude
                     , microlens-platform
                     , microlens-mtl
                     , mtl
  default-language:    Haskell2010
  default-extensions:  BlockArguments
                     , BangPatterns
                     , GADTs
                     , LambdaCase  
                     , MultiWayIf
                     -- , NoImplicitPrelude
                     , OverloadedStrings
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
  hs-source-dirs:      lib

executable rutwe
  main-is:             Main.hs
  other-modules:       MyLib
  build-depends:       base ^>=4.14.1.0, rutwe
  default-language:    Haskell2010
